Updated primitive organization

--- a/AnitoTracerMini/AnitoTracer.vcxproj
+++ b/AnitoTracerMini/AnitoTracer.vcxproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <ClInclude Include="Primitive.h" />
     <ClInclude Include="Source\pch.h" />
+    <ClInclude Include="Source\Primitive.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Primitive.cpp" />
@@ -75,6 +76,7 @@
     <ClCompile Include="Source\pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Source\Primitive.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../MiniEngine/Core/Core.vcxproj">
