--- a/AnitoTracerMini/AnitoTracer.vcxproj.filters
+++ b/AnitoTracerMini/AnitoTracer.vcxproj.filters
@@ -24,12 +24,16 @@
     <ClCompile Include="Primitive.cpp">
       <Filter>Source Files\Primitives</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Primitive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\pch.h" />
     <ClInclude Include="Primitive.h">
       <Filter>Source Files\Primitives</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Primitive.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\Logo.png">
