--- a/MiniEngine/ModelViewer/ModelViewer.vcxproj.filters
+++ b/MiniEngine/ModelViewer/ModelViewer.vcxproj.filters
@@ -229,8 +229,14 @@
     <ClCompile Include="ModelViewer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Primitive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Primitive.h" />
   </ItemGroup>
 </Project>
