--- a/AnitoTracer/AnitoTracer.vcxproj
+++ b/AnitoTracer/AnitoTracer.vcxproj
@@ -96,13 +96,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="D3D12RaytracingPipeline.cpp" />
+    <ClCompile Include="D3D12RootSignature.cpp" />
+    <ClCompile Include="Source\Runtime\D3D12\Raytracing\AccelerationStructures.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12IndexBuffer.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12CommandQueue.cpp" />
-    <ClCompile Include="Source\Runtime\D3D12\D3D12GraphicsPipeline.cpp" />
+    <ClCompile Include="Source\Runtime\D3D12\D3D12GraphicsPipelineObject.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12Buffer.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12Device.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12Resource.cpp" />
-    <ClCompile Include="Source\Runtime\D3D12\D3D12PipelineState.cpp" />
+    <ClCompile Include="Source\Runtime\D3D12\D3D12PipelineStateObject.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12VertexBuffer.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12DebugLayer.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12CommandContext.cpp" />
@@ -116,13 +119,17 @@
     <ClCompile Include="Source\Platform\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="D3D12RaytracingPipeline.h" />
+    <ClInclude Include="D3D12RootSignature.h" />
+    <ClInclude Include="Source\Runtime\D3D12\Raytracing\AccelerationStructures.h" />
+    <ClInclude Include="Source\Runtime\D3D12\Raytracing\AccelerationStructureBuffers.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12IndexBuffer.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12CommandQueue.h" />
-    <ClInclude Include="Source\Runtime\D3D12\D3D12GraphicsPipeline.h" />
+    <ClInclude Include="Source\Runtime\D3D12\D3D12GraphicsPipelineObject.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12Buffer.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12Device.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12Resource.h" />
-    <ClInclude Include="Source\Runtime\D3D12\D3D12PipelineState.h" />
+    <ClInclude Include="Source\Runtime\D3D12\D3D12PipelineStateObject.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12VertexBuffer.h" />
     <ClInclude Include="Resources\resource.h" />
     <ClInclude Include="Source\Libraries\D3DX12\d3dx12.h" />
