--- a/AnitoTracer-NVIDIA/AnitoTracer.vcxproj
+++ b/AnitoTracer-NVIDIA/AnitoTracer.vcxproj
@@ -125,9 +125,13 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Source\CameraManager.h" />
     <ClInclude Include="Source\AppWindow.h" />
+    <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\Dx12\InterfacePointers.h" />
     <ClInclude Include="Source\DXCAPI\dxcapi.use.h" />
+    <ClInclude Include="Source\Math.h" />
+    <ClInclude Include="Source\Object.h" />
     <ClInclude Include="Source\Window.h" />
     <ClInclude Include="Source\Helper.h" />
     <ClInclude Include="Source\Utils.h" />
@@ -160,7 +164,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\CameraManager.cpp" />
     <ClCompile Include="Source\AppWindow.cpp" />
+    <ClCompile Include="Source\Camera.cpp" />
+    <ClCompile Include="Source\Object.cpp" />
     <ClCompile Include="Source\Window.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\Utils.cpp" />
