File filter organization
who the FUCK would separate header and source files like that????

--- a/AnitoTracer-NVIDIA/AnitoTracer.vcxproj
+++ b/AnitoTracer-NVIDIA/AnitoTracer.vcxproj
@@ -125,6 +125,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Source\LightObject.h" />
     <ClInclude Include="Source\CameraManager.h" />
     <ClInclude Include="Source\AppWindow.h" />
     <ClInclude Include="Source\Camera.h" />
@@ -154,17 +155,18 @@
     <ClInclude Include="Source\Win32Application.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\Helpers.hlsli">
+    <None Include="Shaders\Helpers.hlsli">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</DeploymentContent>
     </None>
-    <None Include="shaders\Shaders.hlsl">
+    <None Include="Shaders\Shaders.hlsl">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <FileType>Document</FileType>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</DeploymentContent>
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\LightObject.cpp" />
     <ClCompile Include="Source\CameraManager.cpp" />
     <ClCompile Include="Source\Utils\GraphicsPipeline.cpp" />
     <ClCompile Include="Source\AppWindow.cpp" />
